--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/DeployGitHub.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DeployGitHub.data.br",
-        frameworkUrl: buildUrl + "/DeployGitHub.framework.js.br",
-        codeUrl: buildUrl + "/DeployGitHub.wasm.br",
+        dataUrl: buildUrl + "/DeployGitHub.data.unityweb",
+        frameworkUrl: buildUrl + "/DeployGitHub.framework.js.unityweb",
+        codeUrl: buildUrl + "/DeployGitHub.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (11)",
