--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/DeployGitHub.loader.js";
+      var loaderUrl = buildUrl + "/DeployGitHub3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DeployGitHub.data.unityweb",
-        frameworkUrl: buildUrl + "/DeployGitHub.framework.js.unityweb",
-        codeUrl: buildUrl + "/DeployGitHub.wasm.unityweb",
+        dataUrl: buildUrl + "/DeployGitHub3.data.unityweb",
+        frameworkUrl: buildUrl + "/DeployGitHub3.framework.js.unityweb",
+        codeUrl: buildUrl + "/DeployGitHub3.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (11)",
